Use visibility:hidden instead of display:none for the uninitialized token select to avoid stuff changing position on load

--- a/packages/dapp/assets/scss/main.scss
+++ b/packages/dapp/assets/scss/main.scss
@@ -193,7 +193,7 @@ input, button, textarea, select {
 }
 
 #token-selection.uninitialized {
-    display:none;
+    visibility: hidden
 }
 
 h1.logo {
